--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -31,8 +31,7 @@
       "login_form_submit": "Enter",
       "signup_form_email_label": "Email",
       "signup_form_success": "We will send you an email right before we open!",
-      "admin_link_html":
-        "Are you the store owner? <a href=\"/admin\" class=\"text-link\">Log in here</a>",
+      "admin_link_html": "Are you the store owner? <a href=\"\/admin\" class=\"text-link\">Log in here<\/a>",
       "password_link": "Enter using password",
       "powered_by_shopify_html": "This shop will be powered by {{ shopify }}"
     },
@@ -47,8 +46,7 @@
       }
     },
     "search": {
-      "no_results_html":
-        "Please try a different search term or go back to the <a href=\"/\">homepage</a>.",
+      "no_results_html": "Please try a different search term or go back to the <a href=\"\/\">homepage<\/a>.",
       "empty_search_message": "Search field cannot be empty",
       "results_with_count": {
         "one": "{{ count }} result for \"{{ terms }}\"",
@@ -93,10 +91,8 @@
     "map": {
       "address_error": "Error looking up that address",
       "address_no_results": "No results for that address",
-      "address_query_limit_html":
-        "You have exceeded the Google API usage limit. Consider upgrading to a <a href=\"https://developers.google.com/maps/premium/usage-limits\">Premium Plan</a>.",
-      "auth_error_html":
-        "There was a problem authenticating your Google Maps account.",
+      "address_query_limit_html": "You have exceeded the Google API usage limit. Consider upgrading to a <a href=\"https:\/\/developers.google.com\/maps\/premium\/usage-limits\">Premium Plan<\/a>.",
+      "auth_error_html": "There was a problem authenticating your Google Maps account.",
       "section_heading": "Location"
     }
   },
@@ -118,10 +114,8 @@
       "email": "Email",
       "message": "Message",
       "post": "Post comment",
-      "moderated":
-        "Please note, comments must be approved before they are published",
-      "success_moderated":
-        "Your comment was posted successfully. We will publish it in a little while, as our blog is moderated.",
+      "moderated": "Please note, comments must be approved before they are published",
+      "success_moderated": "Your comment was posted successfully. We will publish it in a little while, as our blog is moderated.",
       "success": "Your comment was posted successfully! Thank you!",
       "comments_with_count": {
         "one": "{{ count }} comment",
@@ -155,8 +149,7 @@
   "collections": {
     "general": {
       "view_all": "View all",
-      "view_all_label":
-        "View all products in the {{ collection_name }} collection",
+      "view_all_label": "View all products in the {{ collection_name }} collection",
       "no_matches": "Sorry, there are no products in this collection",
       "items_with_count": {
         "one": "{{ count }} product",
@@ -187,8 +180,7 @@
       "phone": "Phone Number",
       "message": "Message",
       "submit": "Send",
-      "post_success":
-        "Thanks for contacting us. We'll get back to you as soon as possible.",
+      "post_success": "Thanks for contacting us. We'll get back to you as soon as possible.",
       "error_heading": "Please adjust the following:"
     }
   },
@@ -220,7 +212,7 @@
       "city": "City",
       "country": "Country",
       "province": "Province",
-      "zip": "Postal/Zip Code",
+      "zip": "Postal\/Zip Code",
       "phone": "Phone",
       "set_default": "Set as default address",
       "add": "Add Address",
@@ -296,15 +288,12 @@
   "homepage": {
     "onboarding": {
       "product_title": "Your product's name",
-      "product_description":
-        "This area is used to describe your product’s details. Tell customers about the look, feel, and style of your product. Add details on color, materials used, sizing, and where it was made.",
+      "product_description": "This area is used to describe your product’s details. Tell customers about the look, feel, and style of your product. Add details on color, materials used, sizing, and where it was made.",
       "collection_title": "Your collection's name",
       "blog_title": "Your post's title",
-      "blog_excerpt":
-        "Your store hasn’t published any blog posts yet. A blog can be used to talk about new product launches, tips, or other news you want to share with your customers. You can check out Shopify’s ecommerce blog for inspiration and advice for your own store and blog.",
+      "blog_excerpt": "Your store hasn’t published any blog posts yet. A blog can be used to talk about new product launches, tips, or other news you want to share with your customers. You can check out Shopify’s ecommerce blog for inspiration and advice for your own store and blog.",
       "blog_author": "Author name",
-      "no_content":
-        "This section doesn’t currently include any content. Add content to this section using the sidebar."
+      "no_content": "This section doesn’t currently include any content. Add content to this section using the sidebar."
     }
   },
   "layout": {
@@ -352,8 +341,7 @@
       "disabled": "Disabled",
       "expired": "Expired on {{ expiry }}",
       "active": "Expires on {{ expiry }}",
-      "redeem_html":
-        "Use this code at checkout to redeem your {{ value }} gift card",
+      "redeem_html": "Use this code at checkout to redeem your {{ value }} gift card",
       "shop_link": "Start shopping",
       "print": "Print this gift card",
       "remaining_html": "{{ balance }} left",
@@ -363,5 +351,32 @@
   },
   "date_formats": {
     "month_day_year": "%B %d, %Y"
+  },
+  "globo_filter": {
+    "sorting": {
+      "filter_by": "Filter By",
+      "sort_by": "Sort By",
+      "best_selling": "Best Selling",
+      "featured": "Featured",
+      "az": "Alphabetically, A-Z",
+      "za": "Alphabetically, Z-A",
+      "price_ascending": "Price, low to high",
+      "price_descending": "Price, high to low",
+      "date_descending": "Date, new to old",
+      "date_ascending": "Date, old to new",
+      "sale_percent": "% Sale off"
+    },
+    "generate": {
+      "clear_all": "Clear All",
+      "clear": "Clear",
+      "add_to_cart": "Add to cart",
+      "sale": "Sale",
+      "sold_out": "Sold Out",
+      "quickview": "Quick view"
+    },
+    "stock": {
+      "in_stock": "In Stock",
+      "out_of_stock": "Out of Stock"
+    }
   }
 }
